Site:add Site breadcrumb Wrap and fixed size layout style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -414,6 +414,22 @@
     margin:20px auto 0;
 }
 
+.site-breadcrumb-outer {
+    height: 59px;
+    border-bottom:1px solid #ddd;
+    
+    .site-breadcrumb-inner {
+        width: 1170px;
+        margin:0 auto;
+        height: 59px;
+        
+        h3 {
+            padding:15px 0 14px;
+            line-height: 30px;
+        }
+    }
+}
+
 .page-footer-outer {
 
     padding:10px 0;
